tests/error/hashes7.c
// fail "Expected a formal argument after '#' in macro replacement list for 'a'."
#define a(d) # q
